--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,8 +52,10 @@ dependencies:
   image_picker: ^0.8.4
   permission_handler: ^8.1.4+2
   camera: ^0.9.2+2
+  flutter_credit_card: ^3.0.1
   google_ml_vision: ^0.0.7
-
+  stripe_payment: ^1.1.4
+  webview_flutter: ^2.3.1
 
 
 dev_dependencies:
