--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   google_ml_vision: ^0.0.7
   stripe_payment: ^1.1.4
   webview_flutter: ^2.3.1
+  flutter_inappwebview:
+  flutter_rating_bar: ^4.0.0
 
 
 dev_dependencies:
